--- a/setup.cfg
+++ b/setup.cfg
@@ -24,12 +24,17 @@ install_requires =
     pyyaml
     click
     jsonschema
+    pkg_resources
 packages =
     fms_yaml_tools/schema
     fms_yaml_tools/data_table
     fms_yaml_tools/diag_table
     fms_yaml_tools/field_table
+    gfdl_msd_schemas
     fms_yaml_tools
+
+[options.package_data]
+* = gfdl_msd_schemas/schema.diag
 
 [options.entry_points]
 console_scripts =
