Attempt to use the schemas from the repo

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,9 @@ packages =
     fms_yaml_tools/field_table
     fms_yaml_tools
 
+[options.package_data]
+* = *.json
+
 [options.entry_points]
 console_scripts =
     validate-schema = fms_yaml_tools.schema.validate_schema:valyaml
