--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
     click
     jsonschema
 packages =
+    fms_yaml_tools/schema/gfdl_msd_schemas/FMS/
     fms_yaml_tools/schema
     fms_yaml_tools/data_table
     fms_yaml_tools/diag_table
